refactor: 去除RestTemplate模块和优化代码